server/compilers/goLiteJS/src/test/ml2/valid/structCmp.go
package main

var a struct {
	a int
	b float64
}
var b struct {
	a int
	b float64
	
	
}


func main() {
	
	print(a==b)	
}
