server/compilers/goLiteJS/src/test/ml2/invalid/decl3.go
// variable used in expression before declared
package main

var b int

func main() {
    a = b + 23
    var a int
}
